# tan_test

./: .env.example  .gitignore  README.md  index.html  middleware.ts  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  server.js
app/: globals.css  layout.tsx  page.tsx
app/api/alexa/: route.ts
app/api/lists/: route.ts
app/api/lists/[id]/invite/: route.ts
app/api/lists/[id]/items/: route.ts
app/api/lists/[id]/share/: route.ts
app/api/modify-recipe/: route.ts
app/api/parse-recipe/: route.ts
app/auth/callback/: route.ts
app/lists/: page.tsx
app/lists/[id]/: page.tsx
app/lists/join/[token]/: page.tsx
app/login/: page.tsx
app/recipes/: page.tsx
app/recipes/[id]/: page.tsx
app/recipes/new/: page.tsx
components/: Header.tsx  NewListButton.tsx  RecipeView.tsx  ShoppingListView.tsx  SignOutButton.tsx
lib/: anthropic.ts  types.ts
lib/supabase/: middleware.ts  server.ts
public/: index.html
src/eufy_llm/: agent.py  alexa.py  bedroom_watch.py  dance.py  main.py  notifications.py  robot.py  scheduler.py  server.py  spotify.py  spotify_auth.py  spotify_web.py  stuck_watcher.py  tools.py
supabase/: schema.sql
