[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eufy-llm"
version = "0.1.0"
description = "LLM-controlled Eufy X10 Pro Omni via Home Assistant"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.92.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]
